Committed latest image gallery stuff to the git
Signed-off-by: kumar gayatri <khoomkummi@gmail.com>

--- a/New_Image_tagging/index.html
+++ b/New_Image_tagging/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Image tagging</title>
-  <link rel="stylesheet" href="../css/main.css"/>
+  <link rel="stylesheet" href="/dist/style.css"/>
 </head>
 <body>
   <div id="app"></div>
