--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Image tagging</title>
-  <link rel="stylesheet" href="../css/main.css"/>
+  <link rel="stylesheet" href="/dist/style.css"/>
 </head>
 <body>
   <div id="app"></div>
