Added and deleted latest dist

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
   <title>Image tagging</title>
-  <link rel="stylesheet" href="dist/style.css"/>
+  <link rel="stylesheet" href="New_Image_tagging/dist/style.css"/>
 </head>
 <body>
   <div id="app"></div>
-  <script src="dist/app.js"></script>
+  <script src="New_Image_tagging/dist/app.js"></script>
 </body>
 </html>
