Saved all the Changes

--- a/New_Image_tagging/index.html
+++ b/New_Image_tagging/index.html
@@ -4,11 +4,14 @@
   <title>Image tagging</title>
   <link rel="stylesheet" href="../css/main.css"/>
   <!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
-
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div id="app"></div>
   <script src="/dist/app.js"></script>
+  <script src="/external/moment.js"></script>
 </body>
 </html>
