--- a/index.html
+++ b/index.html
@@ -2,10 +2,15 @@
 <html>
 <head>
   <title>Image tagging</title>
-  <link rel="stylesheet" href="New_Image_tagging/dist/style.css"/>
+  <link rel="stylesheet" href="New_Image_tagging/css/main.css"/>
+  <!-- Latest compiled and minified CSS -->
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 </head>
 <body>
   <div id="app"></div>
   <script src="New_Image_tagging/dist/app.js"></script>
+  <script src="/external/moment.js"></script>
 </body>
 </html>
