--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 <body>
   <div id="app"></div>
   <script src="New_Image_tagging/dist/app.js"></script>
-  <script src="/external/moment.js"></script>
+  <script src="New_Image_tagging/external/moment.js"></script>
 </body>
 </html>
