Corrected the title

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Image tagging</title>
+  <title>Kumar Jayaram Gayatri</title>
   <link rel="stylesheet" href="New_Image_tagging/css/main.css"/>
   <!-- Latest compiled and minified CSS -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
