New_Image_tagging renamed to web_projects

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Kumar Jayaram Gayatri</title>
-  <link rel="stylesheet" href="New_Image_tagging/css/main.css"/>
+  <link rel="stylesheet" href="./Web_Projects/css/main.css"/>
   <!-- Latest compiled and minified CSS -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div id="app"></div>
-  <script src="New_Image_tagging/dist/app.js"></script>
-  <script src="New_Image_tagging/external/moment.js"></script>
+  <script src="./Web_Projects/dist/Web_Projects/app.js"></script>
+  <script src="./Web_Projects/external/moment.js"></script>
 </body>
 </html>
