--- a/Web_Projects/index.html
+++ b/Web_Projects/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <div id="app"></div>
-  <script src="dist/Web_Projects/app.js"></script>
+  <script src="dist/app.js"></script>
   <script src="/external/moment.js"></script>
 </body>
 </html>
