--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div id="app"></div>
-  <script src="./Web_Projects/dist/Web_Projects/app.js"></script>
+  <script src="./Web_Projects/dist/app.js"></script>
   <script src="./Web_Projects/external/moment.js"></script>
 </body>
 </html>
